[package]
name = "zig-up"
version = "1.2.2"
edition = "2024"

[dependencies]
inquire = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
simple-home-dir = "0.4.0"
tar = "0.4.41"
thiserror = "2.0.12"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
xz = "0.1.0"
