[package]
name = "zig-up"
version = "1.3.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
inquire = { version = "0.7", default-features = false, features = ["termion"] }
indicatif = { version = "0.17", features = [
  "improved_unicode",
  "unicode-segmentation",
  "tokio",
] }
simple-home-dir = "0.4.0"
tar = "0.4.41"
thiserror = "2.0.12"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
xz = "0.1.0"
futures-util = "0.3.31"
anyhow = "1.0.98"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
